--- a/index.html
+++ b/index.html
@@ -658,9 +658,9 @@
             <label>Auditor</label>
             <select id="auditor">
               <option value="">Seleccione el auditor</option>
-              <option value="Luis Angel Bolaño Castro">Luis Angel Bolaño Castro</option>
+              <option value="Luis Angel Bolaño Castro">Luis Angel Bolaño</option>
               <option value="Maria Clara Pizarro">Maria Clara Pizarro</option>
-              <option value="Daniel Rodriguez Galofre">Daniel Rodriguez Galofre</option>
+              <option value="Daniel Rodriguez Galofre">Daniel Rodriguez</option>
               <option value="Valentina Jimeno">Valentina Jimeno</option>
             </select>
           </div>
