--- a/index.html
+++ b/index.html
@@ -658,10 +658,12 @@
             <label>Auditor</label>
             <select id="auditor">
               <option value="">Seleccione el auditor</option>
-              <option value="Luis Angel Bolaño Castro">Luis Angel Bolaño</option>
+              <option value="Luis Angel Bolaño">Luis Angel Bolaño</option>
               <option value="Maria Clara Pizarro">Maria Clara Pizarro</option>
-              <option value="Daniel Rodriguez Galofre">Daniel Rodriguez</option>
+              <option value="Daniel Rodriguez">Daniel Rodriguez</option>
+             <option value="Jennifer Melendez">Jennifer Melendez</option>
               <option value="Valentina Jimeno">Valentina Jimeno</option>
+             
             </select>
           </div>
         </div>
@@ -1751,3 +1753,4 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
