--- a/index.html
+++ b/index.html
@@ -628,14 +628,15 @@
 <script>
 function goToServiceAudit() {
   // Aquí debes colocar la URL de tu página de Auditoría de Servicio
-  window.location.href = 'auditoria-servicio.html';
+  window.location.href = 'https://gcalidad3foca-droid.github.io/FORMATOS-LISTAS-DE-VERIFICACION---AUDITORIAS/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - FOCA..html';
 }
 
 function goToClinicalAudit() {
   // Aquí debes colocar la URL de tu página de Auditoría Clínica
-  window.location.href = 'auditoria-clinica.html';
+  window.location.href = 'https://gcalidad3foca-droid.github.io/FORMATOS-LISTAS-DE-VERIFICACION---AUDITORIAS/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - VIU..html';
 }
 </script>
 
 </body>
 </html>
+
