--- a/index.html
+++ b/index.html
@@ -27,14 +27,8 @@
     right: -50%;
     width: 200%;
     height: 200%;
-    background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
-    animation: pulse 15s ease-in-out infinite;
+    background: radial-gradient(circle, rgba(255,255,255,0.08) 0%, transparent 70%);
     pointer-events: none;
-  }
-  
-  @keyframes pulse {
-    0%, 100% { transform: scale(1) rotate(0deg); opacity: 0.3; }
-    50% { transform: scale(1.1) rotate(180deg); opacity: 0.6; }
   }
   
   @keyframes float {
@@ -109,7 +103,6 @@
     align-items: center;
     justify-content: center;
     box-shadow: 0 8px 24px rgba(30, 60, 114, 0.3);
-    animation: float 3s ease-in-out infinite;
     padding: 15px;
   }
   
@@ -158,19 +151,12 @@
   
   .section-title {
     text-align: center;
-    font-size: 20px;
-    font-weight: 700;
-    color: #1e3c72;
-    margin-bottom: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
-  }
-  
-  .section-title i {
-    font-size: 24px;
-    color: #667eea;
+    font-size: 15px;
+    font-weight: 600;
+    color: rgba(30, 60, 114, 0.7);
+    margin-bottom: 50px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
   }
   
   .cards-grid {
@@ -210,7 +196,7 @@
   }
   
   .audit-card:nth-child(2)::before {
-    background: linear-gradient(135deg, rgba(240, 147, 251, 0.08) 0%, rgba(245, 87, 108, 0.08) 100%);
+    background: linear-gradient(135deg, rgba(74, 144, 226, 0.08) 0%, rgba(53, 122, 189, 0.08) 100%);
   }
   
   .audit-card:hover {
@@ -223,7 +209,7 @@
   }
   
   .audit-card:nth-child(2):hover {
-    border-color: #f093fb;
+    border-color: #4A90E2;
   }
   
   .audit-card:hover::before {
@@ -278,12 +264,12 @@
   }
   
   .card-icon.clinical {
-    background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-    box-shadow: 0 15px 35px rgba(240, 147, 251, 0.4);
+    background: linear-gradient(135deg, #4A90E2 0%, #357ABD 100%);
+    box-shadow: 0 15px 35px rgba(74, 144, 226, 0.4);
   }
   
   .card-icon.clinical::after {
-    border-color: #f093fb;
+    border-color: #4A90E2;
   }
   
   .card-title {
@@ -381,35 +367,31 @@
   }
   
   .btn-clinical {
-    background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-    box-shadow: 0 10px 30px rgba(240, 147, 251, 0.4);
+    background: linear-gradient(135deg, #4A90E2 0%, #357ABD 100%);
+    box-shadow: 0 10px 30px rgba(74, 144, 226, 0.4);
   }
   
   .btn-clinical:hover {
-    box-shadow: 0 15px 40px rgba(240, 147, 251, 0.6);
+    box-shadow: 0 15px 40px rgba(74, 144, 226, 0.6);
     transform: translateY(-3px);
   }
   
   .info-section {
-    background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);
-    border-radius: 16px;
-    padding: 30px;
-    margin-top: 40px;
-    border: 2px dashed rgba(102, 126, 234, 0.3);
+    background: linear-gradient(135deg, rgba(102, 126, 234, 0.05) 0%, rgba(118, 75, 162, 0.05) 100%);
+    border-radius: 20px;
+    padding: 40px;
+    margin-top: 50px;
+    border: 1px solid rgba(102, 126, 234, 0.1);
+    text-align: center;
   }
   
   .info-title {
-    font-size: 18px;
-    font-weight: 700;
-    color: #1e3c72;
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .info-title i {
-    color: #667eea;
+    font-size: 13px;
+    font-weight: 600;
+    color: rgba(30, 60, 114, 0.6);
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
   
   .info-grid {
@@ -576,40 +558,8 @@
       </div>
       
       <div class="info-section">
-        <h3 class="info-title">
-          <i class="fas fa-info-circle"></i>
-          Información Importante
-        </h3>
-        <div class="info-grid">
-          <div class="info-item">
-            <i class="fas fa-clock"></i>
-            <div class="info-text">
-              <strong>Tiempo Estimado</strong>
-              <span>Cada auditoría toma aproximadamente 30-45 minutos en completarse</span>
-            </div>
-          </div>
-          <div class="info-item">
-            <i class="fas fa-save"></i>
-            <div class="info-text">
-              <strong>Guardado Automático</strong>
-              <span>Sus respuestas se pueden guardar para continuar después</span>
-            </div>
-          </div>
-          <div class="info-item">
-            <i class="fas fa-file-pdf"></i>
-            <div class="info-text">
-              <strong>Exportación PDF</strong>
-              <span>Genere reportes profesionales al finalizar la auditoría</span>
-            </div>
-          </div>
-          <div class="info-item">
-            <i class="fas fa-chart-bar"></i>
-            <div class="info-text">
-              <strong>Análisis Visual</strong>
-              <span>Visualice resultados con gráficos interactivos y detallados</span>
-            </div>
-          </div>
-        </div>
+        <h3 class="info-title">Sistema de Gestión de Calidad</h3>
+        <p style="color: #666; font-size: 14px; margin: 0;">Evaluación profesional de estándares de servicio</p>
       </div>
     </div>
     
@@ -628,15 +578,14 @@
 <script>
 function goToServiceAudit() {
   // Aquí debes colocar la URL de tu página de Auditoría de Servicio
-  window.location.href = 'https://gcalidad3foca-droid.github.io/FORMATOS-LISTAS-DE-VERIFICACION---AUDITORIAS/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - FOCA..html';
+  window.location.href = 'auditoria-servicio.html';
 }
 
 function goToClinicalAudit() {
   // Aquí debes colocar la URL de tu página de Auditoría Clínica
-  window.location.href = 'https://gcalidad3foca-droid.github.io/FORMATOS-LISTAS-DE-VERIFICACION---AUDITORIAS/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - VIU..html';
+  window.location.href = 'auditoria-clinica.html';
 }
 </script>
 
 </body>
 </html>
-
