--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-content">
-        © 2025 Fundación Oftalmológica del Caribe · Qualisig · Sistema de Gestión de Calidad
+        © 2026 Fundación Oftalmológica del Caribe · Qualisig · Sistema de Gestión de Calidad - Luis Bolaño
       </div>
     </footer>
     
@@ -1193,5 +1193,6 @@ function goToClinicalAudit() {
 
 </body>
 </html>
+
 
 
