--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
 
 <script>
 function goToServiceAudit() {
-  window.location.href = 'https://gcalidad3foca-droid.github.io/Modulo_Auditorias/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - FOCA..html';
+  window.location.href = 'https://gcalidad3foca-droid.github.io/Modulo_Auditorias/LISTA%20DE%20VERIFICACION%20AUDITORIA%20DE%20SERVICIO%20-%20FOCA..html';
 }
 
 function goToClinicalAudit() {
@@ -1193,6 +1193,7 @@ function goToClinicalAudit() {
 
 </body>
 </html>
+
 
 
 
