--- a/index.html
+++ b/index.html
@@ -1187,12 +1187,13 @@ function goToServiceAudit() {
 }
 
 function goToClinicalAudit() {
-  window.location.href = 'https://gcalidad3foca-droid.github.io/Modulo_Auditorias/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - VIU..html';
+  window.location.href = 'https://gcalidad3foca-droid.github.io/Modulo_Auditorias/LISTA%20DE%20VERIFICACION%20AUDITORIA%20DE%20SERVICIO%20-%20VIU..html';
 }
 </script>
 
 </body>
 </html>
+
 
 
 
